--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>To showcase my expertise in developing high-quality, reliable, and efficient
+            mobile applications using various programming languages and tools, while
+            highlighting my ability to create user-friendly interfaces and solve complex
+            technical challenges. I aim to demonstrate my versatility by showcasing a range of
+            apps across different categories, such as gaming, social media, e-commerce, and
+            productivity, and to emphasize my skills in problem-solving, teamwork, and
+            innovation.</p>
         </div>
 
         <div class="row">
@@ -90,8 +96,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>UI/UX Designer &amp; Mobile Developer.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+As a passionate mobile developer, I specialize in creating intuitive and engaging applications for both iOS and Android platforms. With 2 years of experience in the industry, I have developed a strong foundation in mobile app development and design principles, enabling me to build high-quality, user-friendly applications that meet clients' needs and exceed their expectations.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -112,8 +117,7 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              I am always eager to take on new projects and challenges, leveraging my skills and creativity to deliver top-notch mobile applications that drive value and make a positive impact on users' lives.
             </p>
           </div>
         </div>
@@ -127,7 +131,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>If you're looking for a mobile developer who is passionate, dedicated, and capable of turning your ideas into reality, I would love to discuss your project further. Let's connect and create something amazing together!.</p>
         </div>
 
         <div class="row">
@@ -135,7 +139,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1" class="purecounter"></span>
               <p>Happy Clients</p>
             </div>
           </div>
@@ -143,7 +147,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
               <p>Projects</p>
             </div>
           </div>
@@ -159,7 +163,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
               <p>Awards</p>
             </div>
           </div>
