update with data

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="section-title">
           <h2>Skills</h2>
           <p>I am a skilled mobile developer with expertise in crafting high-quality applications for iOS and Android
-            platforms. Proficient in languages like Java, Dart and Kotlin, I excel in creating seamless user
+            platforms. Proficient in languages like Java,Flutter & Dart and Kotlin, I excel in creating seamless user
             experiences, implementing effective UI/UX designs, and optimizing app performance. My strong grasp of app
             architecture and integration with backend services enables me to develop robust and feature-rich mobile
             applications that meet user needs and industry standards.</p>
