update with data

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 <div class="portfolio-links">
                   <!-- <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a> -->
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="https://play.google.com/store/apps/details?id=com.systematic.clickjob&hl=en&gl=US" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
