feature/refactor refactor some facts

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Myat Soe</h4>
-              <p><em>Innovative and deadline-driven Mobile developer with 1+ years of experience designing and
+              <p><em>Innovative and deadline-driven Mobile developer with 2+ years of experience designing and
                   developing user-centered app material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Yangon,Hlaing</li>
@@ -312,9 +312,22 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior Mobile developer</h4>
-              <h5>2022 - Now</h5>
-              <p><em>Yangon , Hlaing</em></p>
+              <h4>Mobile developer</h4>
+              <h5>2021 -2023</h5>
+              <p><em>Systematic Business Solution,Yangon , Hlaing</em></p>
+              <ul>
+                <li>Lead in the design, development, and implementation of the mobile, layout, and production
+                  communication materials</li>
+                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the
+                  project. </li>
+                <li>Supervise the assessment of all development in order to ensure quality and accuracy of the design
+                </li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Mobile developer</h4>
+              <h5>2023 -Now</h5>
+              <p><em>Yin Yiang,Yangon</em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the mobile, layout, and production
                   communication materials</li>
@@ -354,10 +367,10 @@
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
+              <li data-filter="*" class="filter-active">Applications</li>
+              <!-- <li data-filter=".filter-app">App</li>
               <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
         </div>
@@ -469,8 +482,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>Pick-App</h4>
+                <p>App</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
