update required data

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Myat Soe</h4>
-              <p><em>Innovative and deadline-driven Mobile developer with 1+ years of experience designing and
+              <p><em>Innovative and deadline-driven Mobile developer with 2+ years of experience designing and
                   developing user-centered app material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Yangon,Hlaing</li>
@@ -312,17 +312,15 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior Mobile developer</h4>
+              <h4>Mobile developer</h4>
               <h5>2022 - Now</h5>
               <p><em>Yangon , Hlaing</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the mobile, layout, and production
-                  communication materials</li>
+                <li>Contribute to the design, development, and implementation of mobile, layout, and production communication materials.</li>
                 <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the
                   project. </li>
-                <li>Supervise the assessment of all development in order to ensure quality and accuracy of the design
+                <li>Ensure the quality and accuracy of the design by overseeing the assessment of all development.
                 </li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -355,9 +353,9 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
+              <!-- <li data-filter=".filter-app">App</li>
               <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
         </div>
@@ -467,15 +465,17 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/ecommerce.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>E-commerce</h4>
+                <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="assets/img/portfolio/ecommerce.jpg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="E-commerce"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                    <a href="https://install.appcenter.ms/users/myatsoe.dev-gmail.com/apps/e-commerce-public/distribution_groups/public"><i class="bx bx-link"></i></a>
+
                 </div>
               </div>
             </div>
