--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>6 Nov 1999</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>6 Nov 1999</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
                     <span><a
                         href="https://www.linkedin.com/in/myat-soe-12b8ba263/">https://www.linkedin.com/in/myat-soe-12b8ba263/</a></span>
@@ -178,8 +178,9 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.C.SC</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li> -->
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.C.Sc(UCSY) , Bsc(IT)
+                      (EIU,Paris)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>myatsoe.dev@gmail.com</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -344,7 +345,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Myat Soe</h4>
-              <p><em>Innovative and deadline-driven Mobile developer with 2+ years of experience designing and
+              <p><em>Innovative and deadline-driven Mobile developer with 4+ years of experience designing and
                   developing user-centered app material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Yangon,Hlaing</li>
