--- a/index.html
+++ b/index.html
@@ -697,7 +697,18 @@
           </div>
         </div>
         <div class="portfolio-card">
-          <img src="assets/img/portfolio/meandmoney.png" alt="Me & Money" />
+          <img src="assets/img/max_one.png" alt="Me & Money" />
+          <div class="p-content">
+            <h4>MAXOne HR</h4>
+            <div class="p-links">
+              <a href="https://play.google.com/store/apps/details?id=com.systematic.me_and_money" target="_blank"><i
+                  class="bx bx-link"></i></a>
+            </div>
+            <span>Human Resource Management System</span>
+          </div>
+        </div>
+        <div class="portfolio-card">
+          <img src="assets/img/me_and_money.jpg" alt="Me & Money" />
           <div class="p-content">
             <h4>Me & Money</h4>
             <div class="p-links">
@@ -731,7 +742,7 @@
           </div>
         </div>
         <div class="portfolio-card">
-          <img src="assets/img/portfolio/kudos.png" alt="Kudos" />
+          <img src="assets/img/kudos.png" alt="Kudos" />
           <div class="p-content">
             <h4>Kudos</h4>
             <div class="p-links">
@@ -754,7 +765,7 @@
         </div>
         <!-- Real Estate & Lifestyle -->
         <div class="portfolio-card">
-          <img src="assets/img/portfolio/nayar.png" alt="Nayar" />
+          <img src="assets/img/nayar.png" alt="Nayar" />
           <div class="p-content">
             <h4>Nayar</h4>
             <div class="p-links">
@@ -765,7 +776,7 @@
           </div>
         </div>
         <div class="portfolio-card">
-          <img src="assets/img/portfolio/aibaydin.png" alt="AI Baydin" />
+          <img src="assets/img/ai_baydin.png" alt="AI Baydin" />
           <div class="p-content">
             <h4>AI Baydin</h4>
             <div class="p-links">
@@ -787,7 +798,7 @@
           </div>
         </div>
         <div class="portfolio-card">
-          <img src="assets/img/portfolio/bebetter.png" alt="BeBetter" />
+          <img src="assets/img/BeBetter.png" alt="BeBetter" />
           <div class="p-content">
             <h4>BeBetter</h4>
             <div class="p-links">
@@ -799,7 +810,7 @@
         </div>
         <!-- Agriculture & Specialized Apps -->
         <div class="portfolio-card">
-          <img src="assets/img/portfolio/armo.png" alt="Armo" />
+          <img src="assets/img/armo.png" alt="Armo" />
           <div class="p-content">
             <h4>Armo</h4>
             <div class="p-links">
@@ -810,7 +821,7 @@
           </div>
         </div>
         <div class="portfolio-card">
-          <img src="assets/img/portfolio/zahira.png" alt="Zahira" />
+          <img src="assets/img/zahira.jpg" alt="Zahira" />
           <div class="p-content">
             <h4>Zahira</h4>
             <div class="p-links">
@@ -822,7 +833,7 @@
         </div>
         <!-- Custom & Open Source -->
         <div class="portfolio-card">
-          <img src="assets/img/portfolio/sumeer.png" alt="Sumeer" />
+          <img src="assets/img/summer.png" alt="Sumeer" />
           <div class="p-content">
             <h4>Sumeer</h4>
             <div class="p-links">
