--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
           <div class="p-content">
             <h4>MAXOne HR</h4>
             <div class="p-links">
-              <a href="https://play.google.com/store/apps/details?id=com.systematic.me_and_money" target="_blank"><i
+              <a href="https://play.google.com/store/apps/details?id=com.systematic.maxSmartDuty" target="_blank"><i
                   class="bx bx-link"></i></a>
             </div>
             <span>Human Resource Management System</span>
